fixed container height issue for align content

--- a/public/index.css
+++ b/public/index.css
@@ -170,7 +170,7 @@ body {
 #acFlexStart {
   border: 4px solid black;
   border-radius: 5px;
-  height:20rem;
+  height:30rem;
   margin-left: 5%;
   margin-right: 5%;
   display: flex;
@@ -182,7 +182,7 @@ body {
 #acFlexEnd {
   border: 4px solid black;
   border-radius: 5px;
-  height:20rem;
+  height:30rem;
   margin-left: 5%;
   margin-right: 5%;
   display: flex;
@@ -193,7 +193,7 @@ body {
 #acCenter {
   border: 4px solid black;
   border-radius: 5px;
-  height:20rem;
+  height:30rem;
   margin-left: 5%;
   margin-right: 5%;
   display: flex;
@@ -205,7 +205,7 @@ body {
 #acStretch {
   border: 4px solid black;
   border-radius: 5px;
-  height:20rem;
+  height:30rem;
   margin-left: 5%;
   margin-right: 5%;
   display: flex;
@@ -252,12 +252,15 @@ body {
 #aiFlexStart {
   border: 4px solid black;
   border-radius: 5px;
-  height:12rem;
+  height:15rem;
   margin-left: 5%;
   margin-right: 5%;
   display: flex;
- 
   align-items: flex-start;
+}
+
+#aiFlexStart img {
+  height:7rem;
 }
 
 
